@@ -32,8 +32,7 @@ public class CommonUtils {
 
     private static final Logger log = ZetaLogger.getLog(CommonUtils.class.getSimpleName());
 
-    public static boolean executeOsCommandWithTimeout(String[] cmd,
-                                                      long timeoutSeconds) throws Exception {
+    public static boolean executeOsCommandWithTimeout(String[] cmd, long timeoutSeconds) throws Exception {
         Process process = Runtime.getRuntime().exec(cmd);
         log.debug("Process started for cmdline " + Arrays.toString(cmd));
         outputErrorStreamToLog(process.getErrorStream());
@@ -112,16 +111,14 @@ public class CommonUtils {
         return getValueFromConfig(c, "defaultImagesPath");
     }
 
-    public static String getPictureResultsPathFromConfig(Class<?> c)
-            throws Exception {
+    public static String getPictureResultsPathFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "pictureResultsPath");
     }
 
     private final static Semaphore sem = new Semaphore(1);
     private final static Map<String, Optional<String>> cachedConfig = new HashMap<>();
 
-    private static Optional<String> getValueFromConfigFile(Class<?> c,
-                                                           String key, String resourcePath) throws Exception {
+    private static Optional<String> getValueFromConfigFile(Class<?> c, String key, String resourcePath) throws Exception {
         final String configKey = String.format("%s:%s", resourcePath, key);
         if (cachedConfig.containsKey(configKey)) {
             return cachedConfig.get(configKey);
@@ -135,13 +132,11 @@ public class CommonUtils {
             sem.acquire();
             try {
                 final ClassLoader classLoader = c.getClassLoader();
-                configFileStream = classLoader
-                        .getResourceAsStream(resourcePath);
+                configFileStream = classLoader.getResourceAsStream(resourcePath);
                 Properties p = new Properties();
                 p.load(configFileStream);
                 if (p.containsKey(key)) {
-                    cachedConfig.put(configKey,
-                            Optional.of((String) p.get(key)));
+                    cachedConfig.put(configKey, Optional.of((String) p.get(key)));
                 } else {
                     cachedConfig.put(configKey, Optional.empty());
                 }
@@ -162,41 +157,33 @@ public class CommonUtils {
 
     private static final String PROJECT_CONFIG = "Configuration.cnf";
 
-    public static Optional<String> getOptionalValueFromConfig(Class<?> c,
-                                                              String key) throws Exception {
+    public static Optional<String> getOptionalValueFromConfig(Class<?> c, String key) throws Exception {
         return getValueFromConfigFile(c, key, PROJECT_CONFIG);
     }
 
-    public static String getValueFromConfig(Class<?> c, String key)
-            throws Exception {
+    public static String getValueFromConfig(Class<?> c, String key) throws Exception {
         final Optional<String> value = getValueFromConfigFile(c, key, PROJECT_CONFIG);
         if (value.isPresent()) {
             return value.get();
         } else {
-            throw new RuntimeException(String.format(
-                    "There is no '%s' property in the '%s' configuration file",
-                    key, PROJECT_CONFIG));
+            throw new RuntimeException(
+                String.format("There is no '%s' property in the '%s' configuration file", key, PROJECT_CONFIG));
         }
     }
 
     private static final String COMMON_CONFIG = "CommonConfiguration.cnf";
 
-    public static Optional<String> getOptionalValueFromCommonConfig(Class<?> c,
-                                                                    String key) throws Exception {
+    public static Optional<String> getOptionalValueFromCommonConfig(Class<?> c, String key) throws Exception {
         return getValueFromConfigFile(c, key, COMMON_CONFIG);
     }
 
-    public static String getValueFromCommonConfig(Class<?> c, String key)
-            throws Exception {
-        final Optional<String> value = getValueFromConfigFile(c, key,
-                COMMON_CONFIG);
+    public static String getValueFromCommonConfig(Class<?> c, String key) throws Exception {
+        final Optional<String> value = getValueFromConfigFile(c, key, COMMON_CONFIG);
         if (value.isPresent()) {
             return value.get();
         } else {
             throw new RuntimeException(
-                    String.format(
-                            "There is no '%s' property in the '%s' common configuration file",
-                            key, COMMON_CONFIG));
+                String.format("There is no '%s' property in the '%s' common configuration file", key, COMMON_CONFIG));
         }
     }
 
@@ -204,23 +191,19 @@ public class CommonUtils {
         return getValueFromConfig(c, "defaultEmail");
     }
 
-    public static String getDefaultEmailServerFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultEmailServerFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "defaultEmailServer");
     }
 
-    public static String getDriverTimeoutFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDriverTimeoutFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "driverTimeoutSeconds");
     }
 
-    public static String getDefaultPasswordFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultPasswordFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "defaultPassword");
     }
 
-    public static String getDefaultBackEndUrlFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultBackEndUrlFromConfig(Class<?> c) throws Exception {
         final String currentBackendType = getBackendType(c);
         switch (currentBackendType.toLowerCase()) {
             case "edge":
@@ -235,13 +218,11 @@ public class CommonUtils {
             case "production":
                 return getValueFromCommonConfig(c, "productionBackendUrl");
             default:
-                throw new RuntimeException(String.format(
-                        "Non supported backend type '%s'", currentBackendType));
+                throw new RuntimeException(String.format("Non supported backend type '%s'", currentBackendType));
         }
     }
 
-    public static String getAndroidAppiumUrlFromConfig(Class<?> c)
-            throws Exception {
+    public static String getAndroidAppiumUrlFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "androidAppiumUrl");
     }
 
@@ -257,8 +238,7 @@ public class CommonUtils {
         return getValueFromConfig(c, "iOSToolsRoot");
     }
 
-    public static String getWebAppApplicationPathFromConfig(Class<?> c)
-            throws Exception {
+    public static String getWebAppApplicationPathFromConfig(Class<?> c) throws Exception {
         String applicationPath = getValueFromConfig(c, "webappApplicationPath");
         if (!applicationPath.equals("")) {
             return applicationPath;
@@ -282,34 +262,28 @@ public class CommonUtils {
                 case "chris":
                     return getValueFromConfig(c, "webappChrisApplicationPath");
                 default:
-                    throw new RuntimeException(String.format(
-                            "Non supported backend type '%s'", currentBackendType));
+                    throw new RuntimeException(String.format("Non supported backend type '%s'", currentBackendType));
             }
         }
     }
 
-    public static String getAndroidApplicationPathFromConfig(Class<?> c)
-            throws Exception {
+    public static String getAndroidApplicationPathFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "androidApplicationPath");
     }
 
-    public static String getIosApplicationPathFromConfig(Class<?> c)
-            throws Exception {
+    public static String getIosApplicationPathFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "iosApplicationPath");
     }
 
-    public static String getAndroidActivityFromConfig(Class<?> c)
-            throws Exception {
+    public static String getAndroidActivityFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "activity");
     }
 
-    public static String getAndroidWaitActivitiesFromConfig(Class<?> c)
-            throws Exception {
+    public static String getAndroidWaitActivitiesFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "waitActivities");
     }
 
-    public static String getSimulatorImagesPathFromConfig(Class<?> c)
-            throws Exception {
+    public static String getSimulatorImagesPathFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "iosImagesPath");
     }
 
@@ -343,18 +317,15 @@ public class CommonUtils {
         return getValueFromCommonConfig(c, "jenkinsSuLogin");
     }
 
-    public static Optional<String> getRCNotificationsRecepients(Class<?> c)
-            throws Exception {
+    public static Optional<String> getRCNotificationsRecepients(Class<?> c) throws Exception {
         return getOptionalValueFromConfig(c, "rcNotificationsRecepients");
     }
 
-    public static String getJenkinsSuperUserPassword(Class<?> c)
-            throws Exception {
+    public static String getJenkinsSuperUserPassword(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "jenkinsSuPassword");
     }
 
-    public static String getDefaultCallingServiceUrlFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultCallingServiceUrlFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "defaultCallingServiceUrl");
     }
 
@@ -369,74 +340,60 @@ public class CommonUtils {
         return Base64.encodeBase64String(digest);
     }
 
-    public static String getDefaultEmailListenerServiceHostFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultEmailListenerServiceHostFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "defaultEmailListenerServiceHost");
     }
 
-    public static String getDefaultEmailListenerServicePortFromConfig(Class<?> c)
-            throws Exception {
+    public static String getDefaultEmailListenerServicePortFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "defaultEmailListenerServicePort");
     }
 
-    public static boolean getMakeScreenshotsFromConfig(Class<?> c)
-            throws Exception {
+    public static boolean getMakeScreenshotsFromConfig(Class<?> c) throws Exception {
         return Boolean.valueOf(getValueFromCommonConfig(c, "makeScreenshots"));
     }
 
-    public static boolean getMakeScreenshotOnPassedStepsFromConfig(Class<?> c)
-            throws Exception {
-        return Boolean.valueOf(getValueFromCommonConfig(c,
-                "makeScreenshotOnPassedSteps"));
+    public static boolean getMakeScreenshotOnPassedStepsFromConfig(Class<?> c) throws Exception {
+        return Boolean.valueOf(getValueFromCommonConfig(c, "makeScreenshotOnPassedSteps"));
     }
 
     public static boolean getInitNoteIpFromConfig(Class<?> c) throws Exception {
         return Boolean.valueOf(getValueFromCommonConfig(c, "initNodeIp"));
     }
 
-    public static String getTestrailServerUrlFromConfig(Class<?> c)
-            throws Exception {
+    public static String getTestrailServerUrlFromConfig(Class<?> c) throws Exception {
         return getValueFromCommonConfig(c, "testrailServerUrl");
     }
 
-    public static String getTestrailUsernameFromConfig(Class<?> c)
-            throws Exception {
+    public static String getTestrailUsernameFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "testrailUser");
     }
 
-    public static String getTestrailTokenFromConfig(Class<?> c)
-            throws Exception {
+    public static String getTestrailTokenFromConfig(Class<?> c) throws Exception {
         return getValueFromConfig(c, "testrailToken");
     }
 
-    public static Optional<String> getTestrailProjectNameFromConfig(Class<?> c)
-            throws Exception {
+    public static Optional<String> getTestrailProjectNameFromConfig(Class<?> c) throws Exception {
         return getOptionalValueFromCommonConfig(c, "testrailProjectName");
     }
 
-    public static Optional<String> getTestrailPlanNameFromConfig(Class<?> c)
-            throws Exception {
+    public static Optional<String> getTestrailPlanNameFromConfig(Class<?> c) throws Exception {
         return getOptionalValueFromCommonConfig(c, "testrailPlanName");
     }
 
-    public static Optional<String> getTestrailRunNameFromConfig(Class<?> c)
-            throws Exception {
+    public static Optional<String> getTestrailRunNameFromConfig(Class<?> c) throws Exception {
         return getOptionalValueFromCommonConfig(c, "testrailRunName");
     }
 
-    public static Optional<String> getTestrailRunConfigNameFromConfig(Class<?> c)
-            throws Exception {
+    public static Optional<String> getTestrailRunConfigNameFromConfig(Class<?> c) throws Exception {
         return getOptionalValueFromCommonConfig(c, "testrailRunConfigName");
     }
 
     public static boolean getSyncIsAutomated(Class<?> c) throws Exception {
-        return getValueFromCommonConfig(c, "syncIsAutomated").toLowerCase()
-                .equals("true");
+        return getValueFromCommonConfig(c, "syncIsAutomated").toLowerCase().equals("true");
     }
 
     public static boolean getSyncIsMuted(Class<?> c) throws Exception {
-        return getValueFromCommonConfig(c, "syncIsMuted").toLowerCase().equals(
-                "true");
+        return getValueFromCommonConfig(c, "syncIsMuted").toLowerCase().equals("true");
     }
 
     public static Optional<String> getAdbPrefixFromConfig(Class<?> c) throws Exception {
@@ -445,18 +402,15 @@ public class CommonUtils {
 
     public static String generateRandomXdigits(int i) {
         Random rand = new Random();
-        long random = (long) (Math.pow(10, i - 1)) * (rand.nextInt(8) + 1)
-                + (long) rand.nextInt((int) (Math.pow(10, i - 1)));
+        long random = (long) (Math.pow(10, i - 1)) * (rand.nextInt(8) + 1) + (long) rand.nextInt((int) (Math.pow(10, i - 1)));
         return Long.toString(Math.abs(random));
     }
 
-    public static String getPlatformVersionFromConfig(Class<?> cls)
-            throws Exception {
+    public static String getPlatformVersionFromConfig(Class<?> cls) throws Exception {
         return getValueFromConfig(cls, "platformVersion");
     }
 
-    public static Optional<String> getIsUseNativeInstrumentsLibFromConfig(
-            Class<?> cls) throws Exception {
+    public static Optional<String> getIsUseNativeInstrumentsLibFromConfig(Class<?> cls) throws Exception {
         return getOptionalValueFromConfig(cls, "useNativeInstrumentsLib");
     }
 
@@ -471,18 +425,13 @@ public class CommonUtils {
     public static final int SCREENSHOT_TIMEOUT_SECONDS = 5;
 
     public static void takeIOSSimulatorScreenshot(String screenshotPath) throws Exception {
-        executeUIShellScript(
-                new String[]{
-                        String.format("mkdir -p $(dirname \"%s\")",
-                                screenshotPath),
-                        String.format("%s/simshot \"%s\"",
-                                getIOSToolsRoot(CommonUtils.class),
-                                screenshotPath)}).get(
-                SCREENSHOT_TIMEOUT_SECONDS, TimeUnit.SECONDS);
+        executeUIShellScript(new String[] { String.format("mkdir -p $(dirname \"%s\")", screenshotPath),
+                String.format("%s/simshot \"%s\"", getIOSToolsRoot(CommonUtils.class), screenshotPath) })
+                    .get(SCREENSHOT_TIMEOUT_SECONDS, TimeUnit.SECONDS);
     }
 
     private static byte[] fixScreenshotOrientation(final byte[] initialScreenshot, SurfaceOrientation currentOrientation)
-            throws IOException {
+        throws IOException {
         if (currentOrientation != SurfaceOrientation.ROTATION_0) {
             BufferedImage screenshotImage = ImageIO.read(new ByteArrayInputStream(initialScreenshot));
             screenshotImage = ImageUtil.tilt(screenshotImage, -currentOrientation.getCode() * Math.PI / 2);
@@ -496,12 +445,9 @@ public class CommonUtils {
 
     public static void takeAndroidScreenshot(ZetaAndroidDriver driver, File resultScreenShot) throws Exception {
         final String pathOnPhone = String.format("/sdcard/%s.png", generateGUID().replace("-", "").substring(0, 8));
-        final String adbCommandsChain = String.format(
-                ADB_PREFIX + "adb shell screencap -p %1$s; " +
-                        ADB_PREFIX + "adb pull %1$s %2$s; " +
-                        ADB_PREFIX + "adb shell rm %1$s",
-                pathOnPhone, resultScreenShot.getCanonicalPath());
-        Runtime.getRuntime().exec(new String[]{"/bin/bash", "-c", adbCommandsChain}).waitFor();
+        final String adbCommandsChain = String.format(ADB_PREFIX + "adb shell screencap -p %1$s; " + ADB_PREFIX
+            + "adb pull %1$s %2$s; " + ADB_PREFIX + "adb shell rm %1$s", pathOnPhone, resultScreenShot.getCanonicalPath());
+        Runtime.getRuntime().exec(new String[] { "/bin/bash", "-c", adbCommandsChain }).waitFor();
         byte[] output = FileUtils.readFileToByteArray(resultScreenShot);
         if (getIsTabletFromConfig(CommonUtils.class)) {
             SurfaceOrientation currentOrientation;
@@ -515,7 +461,9 @@ public class CommonUtils {
             log.debug(String.format("Current screen orientation value -> %s", currentOrientation.getCode()));
             output = fixScreenshotOrientation(output, currentOrientation);
             IOUtils.write(output, new FileOutputStream(resultScreenShot));
-        }
+            ImageUtil.adjustScreenshotSize(resultScreenShot, false);
+        } else
+            ImageUtil.adjustScreenshotSize(resultScreenShot, true);
     }
 
     private static class UIScriptExecutionMonitor implements Callable<Void> {
@@ -556,20 +504,15 @@ public class CommonUtils {
         final List<String> scriptContent = new ArrayList<>();
         scriptContent.add("#!/bin/bash");
         Collections.addAll(scriptContent, content);
-        scriptContent.add(String.format("rm -f %s",
-                executionFlag.getCanonicalPath()));
+        scriptContent.add(String.format("rm -f %s", executionFlag.getCanonicalPath()));
 
         try (Writer output = new BufferedWriter(new FileWriter(result))) {
             output.write(String.join("\n", scriptContent));
         }
-        Runtime.getRuntime()
-                .exec(new String[]{"chmod", "u+x", result.getCanonicalPath()})
-                .waitFor();
-        Runtime.getRuntime()
-                .exec(new String[]{"/usr/bin/open", "-a", "Terminal",
-                        result.getCanonicalPath(), "-g"}).waitFor();
-        return Executors.newSingleThreadExecutor().submit(
-                new UIScriptExecutionMonitor(executionFlag, result));
+        Runtime.getRuntime().exec(new String[] { "chmod", "u+x", result.getCanonicalPath() }).waitFor();
+        Runtime.getRuntime().exec(new String[] { "/usr/bin/open", "-a", "Terminal", result.getCanonicalPath(), "-g" })
+            .waitFor();
+        return Executors.newSingleThreadExecutor().submit(new UIScriptExecutionMonitor(executionFlag, result));
     }
 
     public static Future<Void> executeUIAppleScript(String[] content) throws Exception {
@@ -609,8 +552,7 @@ public class CommonUtils {
         final File allVersionsRoot = pluginJar.getParentFile().getParentFile();
         for (String versionRootName : allVersionsRoot.list()) {
             try {
-                final File versionRoot =
-                        new File(allVersionsRoot.getCanonicalPath() + File.separator + versionRootName);
+                final File versionRoot = new File(allVersionsRoot.getCanonicalPath() + File.separator + versionRootName);
                 if (versionRoot.isDirectory() && !versionRoot.getName().equals(pluginJar.getParentFile().getName())) {
                     FileUtils.deleteDirectory(versionRoot);
                 }
